# Ganttchart2

./: .gitignore  GanttFlow.spec  Ganttopia.spec  README.md  api.py  build.bat  database.py  export.py  main.py  models.py  pyproject.toml
scratch/: test_sqlite_ro.py
static/: app.js  index.html  style.css
