[project]
name = "ganttchart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.3",
    "pywebview>=6.2.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
